--- a/fb.css
+++ b/fb.css
@@ -1,45 +1,173 @@
-
-
-h1{
-    color: blue;
+:root {
+  --blue: rgb(24, 119, 242);
+  --grey: rgb(214, 211, 211);
+  --white: white;
+}
+a {
+  color: var(--blue);
+  text-decoration: none;
 }
 
-a{
-    color: purple;
+.acc {
+  font-size: 1.12em;
+}
+hr {
+  /* color: grey; */
+  /* background-color: rgb(214, 211, 211); */
+  border: 0.1px solid var(--grey);
 }
 
-.no2{
-    color: blue;
+.image {
+  height: 100px;
+  margin: 0px 0px 2px 625px;
 }
 
-#submit{
-    width: 150px;
-    height: 30px;
-    background-color: rgb(37, 171, 37);
-    border-radius: 6px;
-    color: white;
-    font-size: large;
-    border: 1px solid white ;
+.no2 {
+  color: var(--blue);
 }
-h1{
-    font-size: 80px;
-    text-align: center;
-    margin: 50px 550px;
-}
-.a12{
-    padding:16px;
-    border-radius: 10px ;
-    text-align: center;
-    box-shadow: 5px 5px 30px 4px  grey;
-    margin: 40px 550px;
-    border: 1px solid grey;
-    background-color: white;
-  }
 
-.a13{
-    background-color:rgb(239, 239, 245);
-   
+#submit {
+  width: 190px;
+  height: 40px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bolder;
+  background-color: rgb(0, 164, 0);
+  border-radius: 6px;
+  margin: 21px 0px -8px 120px;
+  color: white;
+  cursor: pointer;
+  font-size: large;
+  border: 1px solid white;
 }
-.bold{
-    font-size: 30px;
+h1 {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 50px;
+  color: rgb(24, 119, 242);
+  text-align: center;
+  margin: 50px 550px;
+}
+.a12 {
+  height: 580px;
+  width: 430px;
+  color: grey;
+  padding-top: 8px;
+  border-radius: 10px;
+  /* text-align: center; */
+  box-shadow: 0px 0px 10px -2.889px #888888;
+
+  margin: 0px 550px;
+  border: 1px solid white;
+  background-color: white;
+}
+.dob {
+  margin: 0px 0px -15px 16px;
+  font-size: 12px;
+}
+.dob:after {
+  content: "*";
+  color: red;
+  font-size: large;
+}
+.bold {
+  font-family: Arial, Helvetica, sans-serif;
+  color: black;
+  font-size: 22px;
+  margin: 0px 0px 0px 100px;
+}
+.a {
+  margin: 0px 0px 10px 150px;
+}
+.firstname {
+  margin: 11px 2px 0px 15px;
+  height: 37px;
+  width: 180px;
+  border-radius: 5px;
+  border: 0.1px solid var(--grey);
+  padding: 0px 0px 0px 10px;
+}
+
+input:focus {
+  outline: none;
+  background: white;
+}
+.date {
+  width: 126px;
+  height: 37px;
+  border: 0.1px solid var(--grey);
+  border-radius: 5px;
+  margin: 0px 7px 0px 14px;
+}
+
+.month {
+  width: 126px;
+  height: 37px;
+  border: 0.1px solid var(--grey);
+  border-radius: 5px;
+  margin: 0px 7px 0px 0px;
+}
+.year {
+  width: 126px;
+  height: 37px;
+  border: 0.1px solid var(--grey);
+  border-radius: 5px;
+}
+.gender {
+  margin: 0px 0px -15px 16px;
+  font-size: 12px;
+}
+.gender:after {
+  content: "*";
+  color: red;
+  font-size: large;
+}
+.gen1 {
+  height: 120px;
+  border: 0.1px solid var(--grey);
+  border-radius: 5px;
+  padding: 5px 67px 6px 15px;
+  margin: 0px 0px 0px 12px;
+}
+.ge1 {
+  margin: 0px 43px 0px -24px;
+}
+
+.gen2 {
+  height: 120px;
+  border: 0.1px solid var(--grey);
+  border-radius: 5px;
+  padding: 5px 67px 6px 15px;
+  margin: 0px 11px 0px -31px;
+}
+.ge2 {
+  margin: 0px 44px 0px -32px;
+}
+.gen3 {
+  height: 120px;
+  border: 0.1px solid var(--grey);
+  border-radius: 5px;
+  padding: 5px 67px 6px 15px;
+  margin: 0px 0px 0px -32px;
+}
+.ge3 {
+  margin: 0px 9px 0px -24px;
+}
+.email {
+  margin: -6px -9px -5px 14px;
+  padding: 0px 0px 0px 10px;
+  height: 37px;
+  width: 395px;
+  border-radius: 5px;
+  border: 0.1px solid var(--grey);
+}
+.a13 {
+  background-color: rgb(240, 242, 245);
+}
+
+.footer {
+  font-size: 12px;
+  margin: 12px 15px 0px 14px;
+}
+
+.acc {
+  padding: 0px 0px 0px 130px;
 }
